/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/
syntax = "proto3";

import "system/guid.proto";
import "dolittle/timeseries/datatypes/data_point.proto";

package dolittle.timeseries.datapoints.server;

option csharp_namespace = "Dolittle.TimeSeries.Runtime.DataPoints.Grpc.Server";

message TimeSerie {
    guid id = 1;
}

// Represents the service for datapoint input stream 
service InputStream {    
    rpc Open(stream dolittle.timeseries.datatypes.DataPoint) returns(stream TimeSerie) {}
}
